--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,7 @@ header {
 	-webkit-background-size: cover;
 	text-align: center;
 	overflow: hidden;
-	background-color: #e9d5a1;
+	background-color: #247ba0;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -231,7 +231,7 @@ header h1 {
 }
 
 #resume {
-	background: #efe1bd;
+	background: #ffe066;
 }
 
 .experience-icon {
@@ -353,7 +353,7 @@ header h1 {
 }
 
 #portfolio {
-	background: #efe1bd;
+	background: #ffe066;
 	padding-bottom: 5%;
 }
 
@@ -389,7 +389,7 @@ header h1 {
 }
 
 #skills {
-	background: #1F1F1F;
+	background: #1f1f1f;
 	min-height: 200px;
 	width: 100%;
 	overflow: hidden;
@@ -414,7 +414,7 @@ header h1 {
 }
 
 footer {
-	background: #1F1F1F;
+	background: #1f1f1f;
 	min-height: 100px;
 	width: 100%;
 	overflow: hidden;
