--- a/src/App.scss
+++ b/src/App.scss
@@ -45,6 +45,7 @@ header {
 	background-size: cover;
 	padding-top: 150px;
 	padding-bottom: 0;
+	color:white;
 }
 
 header .nav {
@@ -52,6 +53,8 @@ header .nav {
 	text-transform: uppercase;
 	letter-spacing: 5px;
 }
+
+
 
 .github-corner:hover .octo-arm {
 	animation:octocat-wave 560ms ease-in-out
@@ -120,7 +123,7 @@ header h1 {
 }
 
 #about {
-	background: #fff;
+	background:#fff;
 	overflow: hidden;
 }
 
@@ -139,7 +142,7 @@ header h1 {
 }
 
 .foto div {
-	background: #ffffff;
+	background:  #DFDCDC;
 	display: inline-block;
 	margin: 0 auto 5% auto;
 	padding: 10px 10px 5px;
@@ -218,7 +221,7 @@ header h1 {
 
 #preview {
 	width: 500px;
-	background-color: #ebeaf5;
+	background-color: #d7d6d6;
 	padding: 15px;
 	position: relative;
 	margin-bottom: 15%;
@@ -231,13 +234,14 @@ header h1 {
 }
 
 #resume {
-	background: #ffe066;
+	background: #d7d6d6;
 }
 
 .experience-icon {
 	font-size: 300%;
 	margin-top: 25%;
 	text-align: center;
+	
 }
 
 .main-badge {
@@ -245,10 +249,11 @@ header h1 {
 	text-align: left !important;
 	padding: 5px 8px 5px 8px !important;
 	vertical-align: baseline;
-	background-color: #AE944F !important;
+	background: #247ba0 !important;
 	color: white;
 	font-weight: lighter !important;
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	// outline:2px solid red;
 }
 
 .experience-badge {
@@ -256,10 +261,15 @@ header h1 {
 	text-align: left !important;
 	padding: 5px 8px 5px 8px !important;
 	vertical-align: baseline;
-	background-color: #f9f5e9 !important;
+	background-color: #247ba0!important;
 	color: black;
 	font-weight: lighter !important;
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	// outline:2px solid red;
+}
+
+.badge-background {
+	background-color:red !important;
 }
 
 .vertical-timeline-element-date {
@@ -353,7 +363,7 @@ header h1 {
 }
 
 #portfolio {
-	background: #ffe066;
+	background: #fff;
 	padding-bottom: 5%;
 }
 
